--- a/page.css
+++ b/page.css
@@ -1,10 +1,9 @@
 .header {
-  background-color: #32CD32;
-  color: black;
+  color: red;
   height: 100px;
   font-size: 36pt;
   text-align: center;
-  font-family: cursive;
+  font-family: sans-serif;
 }
 .subtitle {
   background-color: gray;
