--- a/page.css
+++ b/page.css
@@ -8,5 +8,9 @@
 .subtitle {
   background-color: gray;
   color: white;
+  font-size: 16pt;
+  text-align: center;
+  height: 40px;
+  margin: 0px;
   
 }
