--- a/page.css
+++ b/page.css
@@ -5,12 +5,11 @@
   text-align: center;
   font-family: sans-serif;
 }
-.subtitle {
-  background-color: gray;
-  color: white;
-  font-size: 16pt;
-  text-align: center;
-  height: 40px;
-  margin: 0px;
-  
+
+.box {
+  margin: 5px;
+  width: 25%;
+  float: left;
+  border: 4px solid lightblue;
+  padding: 25px;
 }
